--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-is": "^19.0.0",
     "sanity": "^3.68.3",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
@@ -28,7 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.17.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
